 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.5rc1

 - [ZBX-3158] improved links in map element menu (Aly)
 - [ZBX-3532] fixed add item to trigger expression from popup menu (Vedmak,Vlad)
 - [ZBX-1357] fixed confusing date format in network maps (Richlv)
 - [ZBX-3516] fixed items and hosts disappearing from configuration cache indexes (asaveljevs)
 - [ZBX-3479] fixed possible hang of agents while processing scripts or net.tcp.service* checks (Sasha)
 - [ZBX-3514] fixed log trigger wizard (Aly)
 - [ZBX-3515] fixed names of SNMPv3 security levels, again (asaveljevs)
 - [ZBX-3411] fixed trigger filter update when changing host (Aly,Vlad)
 - [ZBX-3431] fixed severity for log and eventlog or mixed (Vlad)
 - [ZBX-2913] fixed timeout handling in processing of web.page.* checks (sasha)
 - [ZBX-3176] removed navigation dropdown from applications screen (Vedmak)
 - [ZBX-3494] added database monitor items to the queue calculation (asaveljevs)
 - [ZBX-3454] fixed clearing item edited using by Trigger-wizard (Vlad)
 - [ZBX-3481] fixed massAdd for applications (KB)
 - [ZBX-3480] fixed possible crash of server after shutdown of ORACLE server (Sasha)
 - [ZBX-3457] in trigger wizard, use double symbol references past 26 entries (Vlad)
 - [ZBX-983] fixed error when updating trigger (Vedmak)
 - [ZBX-974] recompress some images with pngcrush (Richlv)
 - [ZBX-3446] fixed possible hang of pollers - added timeout handler for external scripts (Sasha)
 - [ZBX-1690] fixed undefined index when creating action with name that already exists (Vedmak)
 - [ZBX-3461] fixed names of IPMI pollers in debug output and the number of items they take (asaveljevs)